fix images for website to display in correct size and not too stretched

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -170,8 +170,8 @@ h2 {
 }
 
 #a-image img {
-  height: 300px;
-  width: 20%;
+  height: 350px;
+  width: 25%;
 }
 
 #btn {
